<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_popup"
    android:background="@drawable/popup_background"
    android:elevation="@dimen/elevation_m">

    <LinearLayout
        android:id="@+id/popupLinearView"
        android:layout_width="297dp"
        android:layout_height="629dp"
        android:maxWidth="500dp"
        android:minWidth="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/segmentedImage"
            android:layout_width="wrap_content"
            android:layout_height="326dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                app:layout_constraintTop_toBottomOf="@+id/segmentedImage">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:padding="@dimen/padding_text"
                        android:text="@string/title_color_name" />

                    <TextView
                        android:id="@+id/color"
                        android:gravity="right"
                        android:padding="@dimen/padding_text" />

                    <Button
                        android:id="@+id/buttonColorName"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/button_bg"
                        android:padding="5dp"
                        />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/gap"
                    android:layout_marginBottom="@dimen/gap"
                    android:background="@color/gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:maxWidth="140dp"
                        android:padding="@dimen/padding_text"
                        android:text="@string/title_incompatible_colorblindness_type" />

                    <TextView
                        android:id="@+id/incompatibleColorblindness"
                        android:gravity="right"
                        android:layout_width="wrap_content"
                        android:maxWidth="120dp"
                        android:padding="@dimen/padding_text"/>
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/gap"
                    android:layout_marginBottom="@dimen/gap"
                    android:background="@color/gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <androidx.constraintlayout.widget.ConstraintLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_text"
                            android:text="@string/title_color_code_table"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <Button
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/buttonHex"
                            android:background="@drawable/button_bg"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </TableRow>
                    <TextView
                        android:layout_marginHorizontal="@dimen/margin"
                        android:id="@+id/rgbValue"/>
                    <TextView
                        android:layout_marginHorizontal="@dimen/margin"
                        android:id="@+id/hexValue" />
            </TableLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/baseline_add_24"
            android:text="to palette" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>